--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -75,7 +75,8 @@
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
   /* --background: oklch(1 0 0); */
-  --background: #c7d7e5;
+  /* --background: #c7d7e5; */
+  --background: red;
   /* --foreground: oklch(0.145 0 0); */
   --foreground: #1e293b;
 }
