--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -76,7 +76,7 @@
   --sidebar-ring: oklch(0.708 0 0);
   /* --background: oklch(1 0 0); */
   /* --background: #c7d7e5; */
-  --background: red;
+  --background: #dbeaf0;
   /* --foreground: oklch(0.145 0 0); */
   --foreground: #1e293b;
 }
