--- a/src/components/modules/PublicDashboard/HomePage/Pricing/Pricing.css
+++ b/src/components/modules/PublicDashboard/HomePage/Pricing/Pricing.css
@@ -1,17 +1,283 @@
-/* Pricing.css */
-@media (max-width: 767px) {
-  .group {
-    perspective: none !important;
-  }
-  .group > div {
-    transform: none !important;
-  }
-  .group > div > div {
-    transform: none !important;
-  }
+.section-pricing {
+  padding: 3rem 0 8rem;
+}
+.card-item {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 3rem;
 }
 
-/* Ensure clip-path is defined if needed */
-.clip-path-polygon {
-  clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%);
+.card {
+  -webkit-perspective: 150rem;
+  -moz-perspective: 150rem;
+  perspective: 150rem;
+  position: relative;
+  /* height: 48rem; */
+  /* background-color: #7480ff; */
+}
+
+.card.card-two {
+  margin-top: 7.5rem;
+}
+
+.card.card-three {
+  margin-top: 15rem;
+}
+
+.card__side {
+  height: 35rem;
+  transition: all 0.8s ease;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  border-radius: 5px;
+  box-shadow: 0 2.5rem 4rem #0000001a;
+}
+
+/* Check After un cardSide */
+
+.card__side--front {
+  background-color: #fff;
+  /* background-color: blue; */
+}
+.card__side--back-1 {
+  background-image: linear-gradient(to right bottom, #bc6161, #773b98);
+}
+.card__side--back-2 {
+  background-image: linear-gradient(to right bottom, #662549, #1aacac);
+}
+.card__side--back {
+  transform: rotateY(180deg);
+}
+.card__side--back-3 {
+  background-image: linear-gradient(to right bottom, #192655, #4f4a45);
+}
+.card:hover .card__side--front {
+  transform: rotateY(-180deg);
+}
+.card:hover .card__side--back {
+  transform: rotateY(0);
+}
+.card__picture {
+  background-size: cover;
+  height: 10rem;
+  background-blend-mode: screen;
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+  clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+.card__picture--1 {
+  background-image: linear-gradient(to right bottom, #bc6161, #773b98);
+}
+.card__picture--2 {
+  background-image: linear-gradient(to right bottom, #662549, #1aacac);
+}
+.card__picture--3 {
+  background-image: linear-gradient(to right bottom, #192655, #4f4a45);
+}
+.card__heading {
+  font-size: 20px;
+  font-weight: 300;
+  line-height: 50px;
+  text-transform: uppercase;
+  text-align: right;
+  color: #fff;
+  position: absolute;
+  top: 80px;
+  right: 20px;
+  width: 75%;
+}
+
+.card__heading-span {
+  padding: 15px 20px;
+  margin-top: 20px;
+  /* -webkit-box-decoration-break: clone; */
+  box-decoration-break: clone;
+}
+
+.card__heading-span--1 {
+  background-image: linear-gradient(
+    to right bottom,
+    rgba(188, 97, 97, 0.85),
+    rgba(119, 59, 152, 0.85)
+  );
+}
+.card__heading-span--2 {
+  background-image: linear-gradient(
+    to right bottom,
+    rgba(102, 37, 73, 0.85),
+    rgba(26, 172, 172, 0.85)
+  );
+}
+.card__heading-span--3 {
+  background-image: linear-gradient(
+    to right bottom,
+    rgba(25, 38, 85, 0.85),
+    rgba(79, 74, 69, 0.85)
+  );
+}
+.card__details {
+  padding: 0.7rem;
+  display: flex;
+  justify-content: center;
+  /* background-color: #7480ff; */
+  /* background-color: orange; */
+  color: #130f49;
+  position: relative;
+  top: 50px;
+}
+
+.card__details ul {
+  list-style: none;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.card__details li:not(:last-child) {
+  border-bottom: 1px solid #eee;
+}
+.card__details li .card-icon {
+  font-size: 1.4rem;
+  color: #1aacac;
+}
+.card__details li .card-icon.card-icon-cross {
+  color: #773b98;
+}
+
+.card__cta {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 90%;
+  text-align: center;
+}
+
+/* For back side font */
+.card__price-box {
+  margin-bottom: 8rem;
+  color: #fff;
+}
+.card__price-only {
+  font-size: 1.4rem;
+  text-transform: uppercase;
+  color: #fff;
+  font-weight: 500;
+}
+.card__price-value {
+  font-size: 6rem;
+  font-weight: 100;
+}
+.card__details ul {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.card__details li {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  font-size: 16px;
+  padding: 2px;
+  color: black;
+}
+@media (max-width: 56.25em) {
+  .card-item {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .card {
+    height: auto;
+    border-radius: 3px;
+    box-shadow: 0 30px 60px #0000001a;
+  }
+
+  .card__picture {
+    height: 6rem;
+  }
+  .card__heading {
+    font-size: 10px;
+    position: absolute;
+    top: 2rem;
+    right: 1rem;
+    line-height: 30px;
+  }
+
+  .card.card-two {
+    margin-top: 0;
+  }
+  .card.card-three {
+    margin-top: 0;
+  }
+
+  .card__side {
+    height: auto;
+    position: relative;
+    box-shadow: none;
+  }
+  .card__side--back {
+    transform: rotateY(0);
+    clip-path: polygon(0 15%, 100% 0, 100% 100%, 0% 100%);
+  }
+  .card:hover .card__side--front {
+    transform: rotateY(0);
+  }
+  .card__details {
+    padding: 1rem 3rem;
+    top: 0;
+  }
+  .card__details ul {
+    gap: 2px;
+  }
+  .card__details li {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.7rem;
+    font-size: 12px;
+    padding: 2px;
+    color: black;
+  }
+  .card__cta {
+    position: relative;
+    top: 0%;
+    left: 0;
+    transform: translate(0);
+    width: 100%;
+    padding: 2rem 0rem;
+  }
+  .card__price-box {
+    margin-bottom: 0rem;
+  }
+  .card__price-value {
+    font-size: 35px;
+  }
+}
+.services-section {
+  position: relative;
+  z-index: 3;
+  padding: 3rem 0 8rem;
+}
+.services-section .services {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 3rem;
+}
+
+/* Not USed Media Query */
+@media (max-width: 75em) {
+  .services-section .services {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (max-width: 37.5em) {
+  .services-section .services {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
