--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,11 +6,11 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  /* --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono); */
-
+  --font-sans: var(--font-geist-sans);
+  --font-mono: var(--font-geist-mono);
+  /* 
   --font-sans: var(--font-roboto);
-  --font-edu: var(--font-edu);
+  --font-edu: var(--font-edu); */
 
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
@@ -125,6 +125,7 @@
   }
   body {
     font-family: var(--font-roboto), sans-serif;
+
     @apply bg-background text-foreground;
   }
 }
